testsuite/tests/name_resolution/W117-011_many_accesses/test.out
Analyzing test.adb
##################

Resolving xrefs for node <ObjectDecl ["V"] test.adb:5:4-13:16>
**************************************************************

Name resolution failed as expected with:

test.adb:12:7: error: expected <null>, got <null>
12 |       G'Access &
   |       ^^^^^^^^



Done.
